I think I fixed the bug that made the top-right buttons jump down a notch when you're not using the multi-user option and had 'Never use font sizes smaller than' option turned on.

--- a/Google Reader Snow Leopard.safariextension/GR MOSX Snow Leopard.css
+++ b/Google Reader Snow Leopard.safariextension/GR MOSX Snow Leopard.css
@@ -945,6 +945,10 @@ inset 0 1px 1px rgba(0, 0, 0, 0.9) !important;
 	background-image: url("img/toolbtn-settings.png") !important;
 }
 
+#guser b.gb4 {
+    display: none !important;
+}
+
 #guser a.gb3:active {
 	background-image: url("img/toolbtn-settingsactive.png") !important;
 }
